--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
   "name": "hubot-grafana",
   "description": "Query Grafana dashboards",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": "Stephen Yeargin <stephen@yearg.in>",
   "license": "MIT",
-
   "keywords": "hubot, hubot-scripts, grafana, graphs",
-
   "repository": {
     "type": "git",
     "url": "git://github.com/stephenyeargin/hubot-grafana.git"
   },
-
   "bugs": {
     "url": "https://github.com/stephenyeargin/hubot-grafana/issues"
   },
-
-  "dependencies": {
-  },
-
+  "dependencies": {},
   "peerDependencies": {
     "hubot": "2.x"
   },
-
   "devDependencies": {
     "chai": "^2.1.1",
     "coffee-script": "1.6.3",
@@ -37,9 +30,7 @@
     "sinon": "^1.13.0",
     "sinon-chai": "^2.7.0"
   },
-
   "main": "index.coffee",
-
   "scripts": {
     "test": "grunt test"
   }
