Add S3 support for graphs
Prior to this PR, a user would have to meet several requirements before the graphs would render on services such as Slack or HipChat. First, they would have to have a wide-open Grafana instance (no authentication). Second, it would have to be on the public internet (accessible from the hosted chat's servers).

This PR handles both of these instances by allowing the user to configure an S3 bucket and credentials. With those credentials, the script will download the image using authentication headers and upload the chart image to the defined S3 path. The script will then provide a link per usual, which will be rendered on the hosted chat service.

Special thanks to @rick, who I (mostly|poorly) ripped off this entire implementation from his `hubot-graphme` package. :grinning:

Fixes #5 /cc @torkelo @tenzer

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "bugs": {
     "url": "https://github.com/stephenyeargin/hubot-grafana/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "knox": "^0.9.2",
+    "request": "^2.58.0"
+  },
   "peerDependencies": {
     "hubot": "2.x"
   },
