demonstrate bug reported in #28

--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "grunt-mocha-test": "~0.12.7",
     "grunt-release": "~0.11.0",
     "hubot": "2.x",
+    "hubot-test-helper": "0.0.6",
     "matchdep": "~0.3.0",
     "mocha": "^2.1.0",
+    "nock": "^2.3.0",
     "sinon": "^1.13.0",
     "sinon-chai": "^2.7.0"
   },
