--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
   "devDependencies": {
     "chai": "^2.1.1",
     "coffee-script": "1.6.3",
+    "coveralls": "^2.11.4",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-coveralls": "^1.0.0",
     "grunt-mocha-test": "~0.12.7",
     "grunt-release": "~0.11.0",
     "hubot": "2.x",
     "hubot-test-helper": "0.0.6",
     "matchdep": "~0.3.0",
     "mocha": "^2.1.0",
+    "mocha-lcov-reporter": "^1.0.0",
     "nock": "^2.3.0",
     "sinon": "^1.13.0",
     "sinon-chai": "^2.7.0"
