--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "url": "https://github.com/stephenyeargin/hubot-grafana/issues"
   },
   "dependencies": {
+    "blanket": "^1.2.1",
     "knox": "^0.9.2",
-    "request": "^2.58.0"
+    "request": "^2.58.0",
+    "travis-cov": "^0.2.5"
   },
   "peerDependencies": {
     "hubot": "2.x"
   },
   "devDependencies": {
     "chai": "^2.1.1",
-    "coffee-script": "1.6.3",
+    "coffee-script": "1.10.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "~0.6.1",
@@ -34,6 +36,18 @@
     "nock": "^2.3.0",
     "sinon": "^1.13.0",
     "sinon-chai": "^2.7.0"
+  },
+  "config": {
+    "blanket": {
+      "pattern": [
+        "/src/"
+      ],
+      "data-cover-never": [
+        "node_modules",
+        "tests"
+      ],
+      "loader": "./node-loaders/coffee-script"
+    }
   },
   "main": "index.coffee",
   "scripts": {
