--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "chai": "^2.1.1",
     "coffee-script": "1.10.0",
+    "coveralls": "^2.11.6",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "~0.6.1",
@@ -33,6 +34,7 @@
     "hubot-test-helper": "0.0.6",
     "matchdep": "~0.3.0",
     "mocha": "^2.1.0",
+    "mocha-lcov-reporter": "^1.0.0",
     "nock": "^2.3.0",
     "sinon": "^1.13.0",
     "sinon-chai": "^2.7.0"
