--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "url": "https://github.com/stephenyeargin/hubot-grafana/issues"
   },
   "dependencies": {
-    "blanket": "^1.2.1",
     "knox": "^0.9.2",
     "request": "^2.58.0",
-    "travis-cov": "^0.2.5"
   },
   "peerDependencies": {
     "hubot": "2.x"
   },
   "devDependencies": {
+    "blanket": "^1.2.1",
     "chai": "^2.1.1",
     "coffee-script": "1.10.0",
     "coveralls": "^2.11.6",
@@ -37,7 +36,8 @@
     "mocha-lcov-reporter": "^1.0.0",
     "nock": "^2.3.0",
     "sinon": "^1.13.0",
-    "sinon-chai": "^2.7.0"
+    "sinon-chai": "^2.7.0",
+    "travis-cov": "^0.2.5"
   },
   "config": {
     "blanket": {
