--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "knox": "^0.9.2",
-    "request": "^2.58.0",
+    "request": "^2.58.0"
   },
   "peerDependencies": {
     "hubot": "2.x"
