--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mocha": "^2.1.0",
     "mocha-lcov-reporter": "^1.0.0",
     "nock": "^2.3.0",
+    "require-dir": "^0.3.0",
     "sinon": "^1.13.0",
     "sinon-chai": "^2.7.0",
     "travis-cov": "^0.2.5"
