--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-release": "~0.11.0",
     "hubot": "2.x",
     "hubot-test-helper": "0.0.6",
+    "husky": "^0.13.3",
     "matchdep": "~0.3.0",
     "mocha": "^2.1.0",
     "mocha-lcov-reporter": "^1.0.0",
@@ -49,6 +50,8 @@
   },
   "main": "index.coffee",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "precommit": "npm test",
+    "prepush": "npm test"
   }
 }
