--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "request": "^2.58.0"
   },
   "peerDependencies": {
-    "hubot": "2.x"
+    "hubot": ">= 2.x"
   },
   "devDependencies": {
     "blanket": "^1.2.1",
