[Trivial] Add Husky hooks

--- a/package.json
+++ b/package.json
@@ -40,8 +40,12 @@
   "main": "index.coffee",
   "scripts": {
     "release": "release-it",
-    "test": "grunt test",
-    "precommit": "npm test",
-    "prepush": "npm test"
+    "test": "grunt test"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "pre-push": "npm test"
+    }
   }
 }
