Move keywords property into an array.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "3.0.0",
   "author": "Stephen Yeargin <stephen@yearg.in>",
   "license": "MIT",
-  "keywords": "hubot, hubot-scripts, grafana, graphs",
+  "keywords": ["hubot", "hubot-scripts", "grafana", "graphs"],
   "repository": {
     "type": "git",
     "url": "git://github.com/stephenyeargin/hubot-grafana.git"
