--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "url": "https://github.com/stephenyeargin/hubot-grafana/issues"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.378.0"
+    "@aws-sdk/client-s3": "^3.378.0",
+    "node-fetch": "^2.6.12"
   },
   "peerDependencies": {
     "hubot": ">=2 <10 || 0.0.0-development"
@@ -29,14 +30,14 @@
     "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "hubot": "^7.0.0",
+    "hubot-mock-adapter": "^2.0.0",
     "hubot-test-helper": "^1.9.0",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "nock": "^13.3.2",
     "release-it": "^16.1.3",
     "require-dir": "^1.2.0",
-    "sinon": "^15.2.0",
-    "sinon-chai": "^3.7.0",
     "travis-cov": "^0.2.5"
   },
   "main": "index.js",
