--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "nock": "^13.3.2",
-    "release-it": "^16.1.3",
-    "travis-cov": "^0.2.5"
+    "nyc": "^15.1.0",
+    "release-it": "^16.1.3"
   },
   "main": "index.js",
   "scripts": {
     "release": "release-it",
     "test": "mocha \"test/**/*.js\" --reporter spec",
+    "test-with-coverage": "nyc --reporter=text mocha \"test/**/*.js\"",
     "prepare": "husky install",
     "lint": "eslint src/ test/"
   },
