--- a/package.json
+++ b/package.json
@@ -35,14 +35,12 @@
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "nock": "^13.3.2",
-    "nyc": "^15.1.0",
-    "release-it": "^16.1.3"
+    "nyc": "^15.1.0"
   },
   "main": "index.js",
   "scripts": {
-    "release": "release-it",
-    "test": "mocha \"test/**/*.js\" --reporter spec",
-    "test-with-coverage": "nyc --reporter=text mocha \"test/**/*.js\"",
+    "test": "script/test",
+    "test-with-coverage": "nyc --reporter=text ./script/test",
     "prepare": "husky install",
     "lint": "eslint src/ test/"
   },
@@ -51,5 +49,8 @@
     "CONTRIBUTING.md",
     "LICENSE",
     "index.js"
-  ]
+  ],
+  "volta": {
+    "node": "18.19.0"
+  }
 }
