--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "node-fetch": "^2.6.12"
   },
   "peerDependencies": {
-    "hubot": ">=2 <10 || 0.0.0-development"
+    "hubot": ">=3 || 0.0.0-development"
   },
   "devDependencies": {
     "@types/hubot": "^3.3.2",
