--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,13 +24,14 @@ jobs:
 
     - name: npm install, build
       run: |
-        npm ci
+        npm run bootstrap
         npm run build --if-present
       env:
         CI: true
 
     - name: npm test
       run: |
+        npm run bootstrap
         npm test
       env:
         CI: true
