--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "script/test",
-    "test-with-coverage": "nyc --reporter=text ./script/test",
+    "test": "mocha \"test/**/*.js\" --reporter spec",
+    "test-with-coverage": "nyc --reporter=text mocha \"test/**/*.js\" --reporter spec",
+    "bootstrap": "script/bootstrap",
     "prepare": "husky install",
     "lint": "eslint src/ test/"
   },
