--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hubot-grafana",
   "description": "Query Grafana dashboards",
-  "version": "5.1.2",
+  "version": "6.0.0",
   "author": "Stephen Yeargin <stephen@yearg.in>",
   "license": "MIT",
   "keywords": [
@@ -39,7 +39,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "mocha \"test/**/*.js\" --reporter spec",
+    "test": "mocha \"test/**/*.js\" --reporter spec --timeout 100",
     "test-with-coverage": "nyc --reporter=text mocha \"test/**/*.js\" --reporter spec",
     "bootstrap": "script/bootstrap",
     "prepare": "husky install",
