--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "src/**/*.js",
     "CONTRIBUTING.md",
     "LICENSE",
-    "index.js"
+    "index.js",
+    "types.d.ts"
   ],
   "volta": {
     "node": "18.19.0"
