Split to a Grafana Service (#180)
* Refactor the creation of the Grafana Client to the Grafan Client Factory.

* Remove only

* Make sure we forbid only on commit and push

* Refactor response to be easier to read. Fail fast.

* Small refactoring to make code more readable.

* refactored pausing / resuming of alerts to the service.

* refactor single alert

* refactor alert querying into the service

* remove send alerts, as it is refactored.

* refactor search out

* refactor get dashboard out

* Version bump & make failing tests execute faster.

* Add prettier support to dev container.

* formatting

* harmonize with the rest of the code

* add missing ';'

* Move object around and refactor parseToGrafanaDashboardRequest and getScreenshotUrls

* Harmonize code

* Fix fetch testing.

* Was missing co-pilot in the dev env.

* Implementation of the bot.

* Refactor types.

* Combine the processing of the string to Grafana dashboards.

* Fix return type.

* Improve documentation with types. Move `nock.cleanAll` to the right `setupNock`.

* Add tests for pausing and unpausing all alerts. Improves code coverage.

* Add tests for Grafana service processing and response handling. Improves code coverage.

* The "should respond with a png graph in the default s3 region" test takes a bit longer at my machine, so add some more timeout to prevent false negatives.

* Fix bug with template values not showing up in the title. Improved test coverage. The test template dashboard now has a parameterized title for the Graph panel (Graph for $server).

* Add getUidBySlug for the Grafana Service.

* Fix typing.

* Rename `DashboardResponse` to `DashboardChart` so it does not look like `GrafanaDashboardResponse.Response`.

* These defaults work better with TypeScript.

* Make it possible to change the output by overriding the system with a custom responder.

* Naming.

* No need for the GrafanaClientFactory now that we have the Bot.

* Rename bot.js to Bot.js

* Restore naming

* Restor

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hubot-grafana",
   "description": "Query Grafana dashboards",
-  "version": "5.1.2",
+  "version": "6.0.0",
   "author": "Stephen Yeargin <stephen@yearg.in>",
   "license": "MIT",
   "keywords": [
@@ -39,7 +39,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "mocha \"test/**/*.js\" --reporter spec",
+    "test": "mocha \"test/**/*.js\" --reporter spec --no-experiemental-fetch --timeout 200",
     "test-with-coverage": "nyc --reporter=text mocha \"test/**/*.js\" --reporter spec",
     "bootstrap": "script/bootstrap",
     "prepare": "husky install",
@@ -49,7 +49,8 @@
     "src/**/*.js",
     "CONTRIBUTING.md",
     "LICENSE",
-    "index.js"
+    "index.js",
+    "types.d.ts"
   ],
   "volta": {
     "node": "18.19.0"
