Looks like the "husky install" command is deprecated.
More info here: https://stackoverflow.com/questions/77897612/problem-when-trying-to-add-prettiers-git-hook-husky-install-error-install-com

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "mocha \"test/**/*.js\" --reporter spec --no-experimental-fetch --timeout 200",
     "test-with-coverage": "nyc --reporter=text mocha \"test/**/*.js\" --reporter spec",
     "bootstrap": "script/bootstrap",
-    "prepare": "husky install",
+    "prepare": "husky",
     "lint": "eslint src/ test/"
   },
   "files": [
