Make sure we forbid things of the final testing!

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: "20"
       - run: npm ci
-      - run: npm test
+      - run: npm test -- --forbid-only --forbid-pending
       - uses: JS-DevTools/npm-publish@v3
         id: publish
         with:
