Try to fix mocha test runner

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,8 @@
 			"extensions": [
 				"esbenp.prettier-vscode",
 				"GitHub.copilot",
-				"streetsidesoftware.code-spell-checker"
+				"streetsidesoftware.code-spell-checker",
+				"hbenl.vscode-mocha-test-adapter"
 			]
 		}
 	}
