--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
       "autofitpanels",
       "datasource",
+      "esbenp",
       "gnet",
+      "hbenl",
       "linewidth",
       "pointradius",
       "sparkline",
