`mocha.opts` is out of support since v8
Now it works with the dev container.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye
 
 # Install the npm packages globally
-RUN npm install -g npm \
+RUN npm install -g npm@10.7.0 \
     && npm install -g npm-check-updates
 
 COPY ./startup.sh /
